...
        android:layout_marginTop="8dp"
        android:text="Creator ID: "
        android:enabled="false" />

    <!-- Buttons for Edit and Back to Map -->
    <Button
        android:id="@+id/edit_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Edit Event"
        android:layout_gravity="center_horizontal" />

...
